webapp/assets/styles/main.scss
@import './imports/_tooltip.scss';
@import './imports/_toast.scss';

body {
  scrollbar-gutter: stable;
}

// Transition Easing
$easeOut: cubic-bezier(0.19, 1, 0.22, 1);

.disabled-content {
  position: relative;

  &::before {
    @include border-radius($border-radius-x-large);
    box-shadow: inset 0 0 0 5px $color-danger;
    content: '';
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 2;
    pointer-events: none;
  }
}

.layout-enter-active {
  transition: opacity 80ms ease-out;
  transition-delay: 80ms;
}
.layout-leave-active {
  transition: opacity 80ms ease-in;
}
.layout-enter,
.layout-leave-active {
  opacity: 0;
}

// slide up ease
.slide-up-enter-active {
  transition: all 500ms $easeOut;
  transition-delay: 20ms;
  opacity: 1;
  transform: translate3d(0, 0, 0);
}
.slide-up-enter,
.slide-up-leave-active {
  opacity: 0;
  box-shadow: none;
  transform: translate3d(0, 15px, 0);
}

.main-navigation {
  background: #fff;
}

blockquote {
  display: block;
  padding: 15px 20px 15px 45px;
  margin: 0 0 20px;
  position: relative;

  /*Font*/
  font-size: $font-size-base;
  line-height: 1.2;
  color: $color-neutral-40;
  font-family: $font-family-serif;
  font-style: italic;

  border-left: 3px dotted $color-neutral-70;

  &::before {
    content: '\201C';
    /*Unicode for Left Double Quote*/

    /*Font*/
    font-size: $font-size-xxxx-large;
    font-weight: bold;
    color: $color-neutral-50;

    /*Positioning*/
    position: absolute;
    left: 10px;
    top: 5px;
  }

  p {
    margin-top: 0;
  }
}
.main-navigation {
  box-shadow: $box-shadow-base;
  position: fixed;
  width: 100%;
  z-index: $z-index-page-submenu;

  a {
    outline: none;
  }
}

hr {
  border: 0;
  width: 100%;
  color: $color-neutral-80;
  background-color: $color-neutral-80;
  height: 1px !important;
}

[class$='menu-trigger'] {
  user-select: none;
}
[class$='menu-popover'] {
  display: inline-block;

  nav {
    margin-left: -17px;
    margin-right: -15px;
  }
}

#overlay {
  display: block;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  position: fixed;
  background: rgba(0, 0, 0, 0.15);
  z-index: $z-index-overlay;
  pointer-events: none;
  transition: opacity 150ms ease-out;
  transition-delay: 50ms;

  .dropdown-open & {
    opacity: 1;
    transition-delay: 0;
    transition: opacity 80ms ease-out;

    @media(hover: none) {
      pointer-events: all;
    }
  }
}

body.dropdown-open {
  max-height: 100vh;
  overflow: hidden;
}

.base-card > .ds-section {
  padding: 0;
  margin: -$space-base;

  .ds-container {
    padding: $space-base;
  }
}

[class$='menu-popover'] {
  min-width: 130px;

  button {
    display: flex;
    align-content: center;
    align-items: center;

    .base-icon {
      padding-right: $space-xx-small;
    }
  }
}

.v-popover.open .trigger a {
  color: $text-color-link-active;
}

.hyphenate-text {
  hyphens: auto;
  overflow-wrap: break-word;
  word-wrap: break-word;
}

.dropdown-arrow {
  font-size: $font-size-xx-small;
}

